# rs-codec-binary

./: Cargo.toml  README.md  README.zh_CN.md
doc/: user_guide.md  user_guide.zh_CN.md
src/: lib.rs  prelude.rs
src/codec/: binary_codec.rs  decode_policy.rs  leb128_codec.rs  leb128_decode_error.rs  mod.rs  non_strict.rs  strict.rs  zig_zag_codec.rs
tests/: prelude_tests.rs
tests/codec/: binary_codec_tests.rs  decode_policy_tests.rs  leb128_codec_tests.rs  leb128_decode_error_kind_tests.rs  leb128_decode_error_tests.rs  mod.rs  non_strict_tests.rs  strict_tests.rs  zig_zag_codec_tests.rs
